<resources>
    <string name="app_name">Aplicacion1</string>
    <string name="tituloAplicacion">Aplicación</string>
    <string name="textoBotonJugar">Jugar</string>
    <string name="textoBotonConfigurar">Configurar</string>
    <string name="textoBotonAcerca">Acerca de</string>
    <string name="textoBotonSalir">Salir</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menuConfiguracion">Configuración</string>
    <string name="menuSobre">Sobre...</string>
    <string name="buscar">Buscar</string>
    <string name="pa_key">preferencias principal</string>
    <string name="p1_summary">musica</string>
    <string name="p1_key">musica</string>
    <string name="p1_title">Reproducir música</string>
    <string name="p2_key">Graficos</string>
    <string name="p2_summary">Escoger la representación de gráficos</string>
    <string name="p2_title">Tipo de graficos</string>
    <string name="p3_key">Fragmentos</string>
    <string name="p3_summary">En cuantos trozos se divide un asteroide</string>
    <string name="p3_title">Numero de fragmentos</string>
    <string name="textoBotonPuntuaciones">Puntuaciones</string>
    <string name="text4">Puntuaciones</string>
    <string name="text5">No hay puntuaciones</string>
    <string name="texto6">Otro texto</string>
</resources>
