<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Localizacion"
    android:theme="@style/estiloPropio">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tituloAplicacion"
        android:id="@+id/tituloAplicacion"
        android:layout_marginTop="67dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/sizeTituloAplicacion"
        android:textColor="@color/colorTituloAplicacion" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textoBotonJugar"
        android:id="@+id/botonJugar"
        android:layout_below="@+id/tituloAplicacion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textoBotonConfigurar"
        android:id="@+id/botonConfigurar"
        android:layout_below="@+id/botonJugar"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textoBotonAcerca"
        android:id="@+id/botonAcerca"
        android:layout_below="@+id/botonConfigurar"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textoBotonSalir"
        android:id="@+id/botonSalir"
        android:layout_below="@+id/botonAcerca"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"/>
</RelativeLayout>
